Finish RedisPostRepository and RedisUserRepository